# synacor

./: .gitignore  Cargo.toml  arch-spec  beach  beach.txt  coins  coins.txt  grid.txt  hack-routine.txt  journal.txt  notes.txt  teleporter  twisty-can  twisty-passages  twisty.txt  vault
src/: coins.rs  decode.rs  diss.rs  dumpencodedstrings.rs  dumpstrings.rs  evenbytes.rs  find8th.rs  machine.rs  main.rs  synacor.rs  vault.rs
