[package]
name = "synacor"
version = "0.1.0"
authors = ["Neil Roberts <bpeeluk@yahoo.co.uk>"]

[[bin]]
name = "synacor"

[[bin]]
name = "diss"

[[bin]]
name = "dumpstrings"

[[bin]]
name = "decode"

[[bin]]
name = "evenbytes"

[[bin]]
name = "coins"

[[bin]]
name = "dumpencodedstrings"

[[bin]]
name = "find8th"

[[bin]]
name = "vault"

[dependencies]
